changes in filters, backward compatibility not only HTTPS but HTTP as well

--- a/releases/v0.20/filters/f2b-fuzzing-payloads.conf
+++ b/releases/v0.20/filters/f2b-fuzzing-payloads.conf
@@ -4,14 +4,14 @@
 # Production Ready
 
 [Definition]
-failregex = ^.* (?:GET|POST) https [^ ]+ "/\[[^\]]*\].*" \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ "/.*(?:hello|world|test|random|foo|bar|baz|admin|shell|cmd)[^"]*" \[Client <HOST>\]
-            ^.* POST https [^ ]+ ".*hello world.*" \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ "/(?:[a-z]{1,3}\.)?txt" \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ "/\." \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ "/~" \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ "/\?" \[Client <HOST>\]
-            ^.* (?:GET|POST) https [^ ]+ ".*%%2[ef].*" \[Client <HOST>\]
+failregex = ^.* (?:GET|POST) (?:http|https) [^ ]+ "/\[[^\]]*\].*" \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ "/.*(?:hello|world|test|random|foo|bar|baz|admin|shell|cmd)[^"]*" \[Client <HOST>\]
+            ^.* POST (?:http|https) [^ ]+ ".*hello world.*" \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ "/(?:[a-z]{1,3}\.)?txt" \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ "/\." \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ "/~" \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ "/\?" \[Client <HOST>\]
+            ^.* (?:GET|POST) (?:http|https) [^ ]+ ".*%%2[ef].*" \[Client <HOST>\]
 
 ignoreregex = ^.*booking/reschedule/.*$
               ^.*/assets/.*$
